diesel_compile_tests/tests/ui/belongs_to_missing_foreign_key_column.stderr
error[E0412]: cannot find type `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:13:14
   |
13 | #[belongs_to(Bar)]
   |              ^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:13:14
   |
13 | #[belongs_to(Bar)]
   |              ^^^ not found in `foo`

error[E0412]: cannot find type `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:20:33
   |
20 | #[belongs_to(Bar, foreign_key = "bar_id")]
   |                                 ^^^^^^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:20:33
   |
20 | #[belongs_to(Bar, foreign_key = "bar_id")]
   |                                 ^^^^^^^^ not found in `foo`

error[E0412]: cannot find type `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:27:14
   |
27 | #[belongs_to(Bar)]
   |              ^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:27:14
   |
27 | #[belongs_to(Bar)]
   |              ^^^ not found in `foo`

error[E0412]: cannot find type `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:35:33
   |
35 | #[belongs_to(Bar, foreign_key = "bar_id")]
   |                                 ^^^^^^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:35:33
   |
35 | #[belongs_to(Bar, foreign_key = "bar_id")]
   |                                 ^^^^^^^^ not found in `foo`

error: aborting due to 8 previous errors

Some errors occurred: E0412, E0425.
For more information about an error, try `rustc --explain E0412`.
